xml for reset password  activity updated

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -9,16 +9,31 @@
     <EditText
         android:id="@+id/inputEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+
+        android:layout_height="@dimen/_45sdp"
+        android:layout_marginTop="190dp"
         android:hint="Enter your email"
-        android:inputType="textEmailAddress"/>
+        android:inputType="textEmailAddress"
+        android:textColor="@color/primary_text"
+        android:textSize="@dimen/_13ssp"
+        android:background="@drawable/background_input"
+        />
 
 
     <Button
         android:id="@+id/buttonSendVerificationCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_25sdp"
         android:text="Send Verification Code"/>
+
+    <Button
+        android:id="@+id/buttonBackToSignUp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:text="Back to Sign Up"
+        android:visibility="visible" />
 
 
 
@@ -27,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back to Sign-In"
-        android:visibility="gone" /> <!-- Initially hidden -->
+        android:visibility="gone" />
 
 </LinearLayout>
 
